# canary

./: .ghcid  .gitignore  CHANGELOG.md  cabal.project  canary.cabal
.github/workflows/: ci.yml
src/Control/Concurrent/Async/: Extra.hs
src/Data/Stream/Monadic/: Extra.hs  Instances.hs
src/Data/Text/: Extra.hs
src/GHC/Wasm/JS/: Array.hs  AsyncIterator.hs  ESM.hs  Free.hs  Instances.hs  JSON.hs  Promise.hs  ReadableStream.hs  RuntimeFFI.hs  String.hs  URL.hs  Uint8Array.hs
test/: Main.hs
util/: chrome  ci  firefox  node  test
